fix: better list spacing

--- a/assets/base_style.css
+++ b/assets/base_style.css
@@ -341,6 +341,7 @@ nav {
         margin: 1em 0;
     }
     ol, ul {
+        margin: 1em 0;
         padding-left: 3em;
 
         li {
